# malm

./: .gitignore  CLAUDE.md  README.md  package.json  pyproject.toml
.claude-plugin/: plugin.json
.omg/state/: learn-watch.json
agents/: janitor.md  malm.md  pst-search.md  search.md
commands/: janitor.md  malm.md  search.md
docs/: 2026-03-28-downloads-janitor-design.md
docs/plans/: 2026-04-16-unified-document-pipeline.md
scripts/: embed-documents.py  init-db.py  migrate-to-unified.py  pst-search.sh  rules.json
skills/cloud-agent-starter/: SKILL.md
src/janitor/: __init__.py  content.py  db.py  discovery_db.py  embeddings.py  export.py  janitor.py  lock.py  models.py  pst_extract.py  rules.py  store.py
src/janitor/extract/: __init__.py  hasher.py  text.py
src/janitor/ingest/: __init__.py  filesystem.py  pst.py
src/janitor/web/: app.py
src/janitor/web/templates/: base.html  email_detail.html  index.html  search.html  thread.html
src/malm/: __init__.py  export.py  models.py  pst_extract.py  rules.py  store.py
src/malm/extract/: __init__.py  email_parser.py  text.py
src/malm/ingest/: __init__.py  filesystem.py  pst.py
src/malm/web/: app.py
src/malm/web/templates/: base.html  folder.html  index.html  search.html  thread.html  timeline.html
tests/: test_db.py  test_export.py  test_extract.py  test_ingest_filesystem.py  test_ingest_pst.py  test_integration.py  test_janitor.py  test_lock.py  test_pst_extract.py  test_real_discovery.py  test_rules.py  test_rules_validation.py  test_store.py  test_web.py  test_web_unified.py
(+2 files in other folders)
