[project]
name = "janitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Teddy M", email = "134236331+tm07x@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.4.3",
    "openpyxl>=3.1.5",
    "pymupdf>=1.27.2.2",
    "python-docx>=1.2.0",
    "sqlite-vec>=0.1.7",
]

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
